css/style.css
body {
    margin: 0px auto;
    background-color: #222222e0;
}

/* Header stylings */

header {
    height: calc(100vh - 50px);
    /* Currently not working properly live on webpage or Github pages, need to take a look at this! */
    background: linear-gradient(#222222e0, #222222e0),
    url("images/starry.jpg");
    /**/
    padding-top: 50px;
    background-size: cover;
    background-repeat: no-repeat;
    text-align: center;
}

.headertext {
    text-align: center;
    padding-left: 30%;
    padding-right: 30%;
}

.textAnimation {
	-webkit-animation: text-focus-in 3s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
	animation: text-focus-in 3s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
}

@-webkit-keyframes text-focus-in {
    0% {
        -webkit-filter: blur(12px);
        filter: blur(12px);
        opacity: 0;
    }
    100% {
        -webkit-filter: blur(0px);
        filter: blur(0px);
        opacity: 1;
    }
  }

  @keyframes text-focus-in {
    0% {
        -webkit-filter: blur(12px);
        filter: blur(12px);
        opacity: 0;
    }
    100% {
        -webkit-filter: blur(0px);
        filter: blur(0px);
        opacity: 1;
    }
  }

/**/

/* Button Styling */

#scrollToStart {
    border-radius: 3rem;
    cursor: pointer;
    border: 3px solid #FF4F19;
    background: #ffffff00;
    padding: 15px;
    text-transform: uppercase;
    color: #fff;
    font-family: 'Josefin Sans', sans-serif;
    font-weight: bold;
    text-align: center;
    transition: all 1s ease 0s;
    position: sticky;
    top: 0;
}

#scrollToStart:hover {
    border: 3px solid #DB3F3D;
    font-size: 1.1em;
    letter-spacing: 0.1em;
    transition: all 1s ease 0s;
}

#scrollToStart:focus {
    outline: 0;
}

/**/

/* Planetstyling */

#mars {
    position: relative;
    transform: rotate(-25deg);
    height: 30vh;
    width: auto;
    transition: all 0.8s ease 0s;
    -webkit-animation: text-focus-in 3s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
	animation: text-focus-in 3s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
}

#mars:hover {
    position: relative;
    transform: rotate(-25deg);
    height: 35vh;
    width: auto;
    transition: all 0.8s ease 0s;
}

/**/

/* Boxes, grids, ul's and li styling */

#data {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    padding: 20px;
    grid-row-gap: 15px;
    grid-column-gap: 15px;
}

#content {
    display: flex;
    justify-content: center;
    align-items: center;
}

.filteroptions {
    display: grid;
    grid-template-columns: repeat(2,1fr);
    padding: 20px;
    grid-row-gap: 10px;
    grid-column-gap: 10px;
}

.filterbox {
    padding: 20px;
    display: flex;
    justify-content: space-around;
    background-color: #464646;
    border-radius: 5px;
    color: white;
}

.box {
    padding: 15px;
    color: white;
    position: relative;
    min-height: 350px;
    border-radius: 15px;
    background-color: #7F7E7E;
}

.box:hover {
    -webkit-box-shadow:inset 0px 0px 15px 0px #000000bf;
    -moz-box-shadow:inset 0px 0px 15px 0px #000000bf;
    box-shadow:inset 0px 0px 15px 0px #000000bf;
    transition: all 0.5s ease 0s;
    cursor: pointer;
}

.bigbox {
    height: 100vh;
    width: calc(100vw - 40px);
    box-sizing: border-box;
    padding: 15px;
    border-radius: 15px;
    color: white;
    position: relative;
    min-height: 350px;
    border-radius: 15px;
    background-color: #7F7E7E;
}

.bigbox li:nth-child(9) {
    box-sizing: border-box;
    border-bottom: 1px solid black;
    padding-bottom: 1em;
}

.box li:nth-child(5) {
    box-sizing: border-box;
    border-bottom: 1px solid black;
    padding-bottom: 1em;
}

ul {
    padding: 0px;
}

li {
    list-style-type: none;
}

header h1 {
    font-family: 'Righteous', cursive;
    letter-spacing: 0.2em;
    color: white;
}

header h2 {
    font-family: 'Lato', sans-serif;
    color: white;
}

p, li, label, button  {
    font-family: 'Lato', sans-serif;
}

/**/

.bottom {
    position: absolute;
    top: 0px;
    right: 0px;
    margin-right: 1em;
    background-color: #cc3939;
    color: white;
    padding: 3px;
    border-radius: 5px;
}

.filterbutton {
    background-color: #cc3939;
    color: white;
    padding: 3px;
    border-radius: 5px;
    border-style: none;
    padding: 5px;
}

.filterbutton:hover {
    cursor: pointer;
    -webkit-box-shadow:inset 0px 0px 10px 0px #000000bf;
    -moz-box-shadow:inset 0px 0px 10px 0px #000000bf;
    box-shadow:inset 0px 0px 10px 0px #000000bf;
    transition: all 0.5s ease 0s;
}

.returnbuttons {
    position: absolute;
    bottom: 1em;
    right: 0px;
    margin-right: 1em;
    background-color: #cc3939;
    color: white;
    padding: 3px;
    border-radius: 5px;
    border-style: none;
    padding: 5px;
    font-size: 1.5em;
    cursor: pointer;
}

.returnbuttons:hover {
    -webkit-box-shadow:inset 0px 0px 10px 0px #000000bf;
    -moz-box-shadow:inset 0px 0px 10px 0px #000000bf;
    box-shadow:inset 0px 0px 10px 0px #000000bf;
    transition: all 0.5s ease 0s;
}

.vidplayerDiv {
    padding-top: 30px;
    text-align: center;
}

.vidPlayer {
    width: 420px;
    height: 345px;
}

/* iPad */

@media screen and (max-width: 768px) {
    #data {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        padding: 10px;
        grid-row-gap: 10px;
        grid-column-gap: 10px;
    }

    .bigbox {
        height: 100%;
        width: calc(100vw - 20px);
        box-sizing: border-box;
        border: 3px solid black;
        padding: 5px;
        color: black;
    }
}

/**/

/* Mobile */

@media screen and (max-width: 412px) {
    #data {
        display: grid;
        grid-template-columns: repeat(1, 1fr);
        padding: 10px;
        grid-row-gap: 10px;
        grid-column-gap: 10px;
    }

    .filteroptions {
        display: grid;
        grid-template-columns: repeat(1, 1fr);
        padding: 20px;
        grid-column-gap: 5px;
    }

    .vidPlayer {
        width: 100%;
        height: auto;
    }

    .bigbox {
        height: 100%;
        width: 100vw;
        box-sizing: border-box;
        border: 3px solid black;
        padding: 5px;
        color: black;
    }

    .headertext {
        text-align: center;
        padding-left: 10%;
        padding-right: 10%;
    }
}

/**/

#spinner {
    width: 40px;
    height: 40px;
  
    position: relative;
    margin: 100px auto;
  }
  
  .double-bounce1, .double-bounce2 {
    width: 100%;
    height: 100%;
    border-radius: 50%;
    background-color: #DB3F3D;
    opacity: 0.6;
    position: absolute;
    top: 0;
    left: 0;
    
    -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
    animation: sk-bounce 2.0s infinite ease-in-out;
  }
  
  .double-bounce2 {
    -webkit-animation-delay: -1.0s;
    animation-delay: -1.0s;
  }
  
  @-webkit-keyframes sk-bounce {
    0%, 100% { -webkit-transform: scale(0.0) }
    50% { -webkit-transform: scale(1.0) }
  }
  
  @keyframes sk-bounce {
    0%, 100% { 
      transform: scale(0.0);
      -webkit-transform: scale(0.0);
    } 50% { 
      transform: scale(1.0);
      -webkit-transform: scale(1.0);
    }
  }

